force-app/main/default/objects/Awards__c/Awards__c.object-meta.xml
<CustomObject>
    <label>Award</label>
    <nameField>
        <label>Award</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Awards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>