force-app/main/default/objects/Awards__c/fields/Awards_Name__c.field-meta.xml
<CustomField>
    <fullName>Awards_Name__c</fullName>
    <label>Awards Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advocate of the Year Award</fullName>
            </value>
            <value>
                <fullName>Diplomat of the Year Award</fullName>
            </value>
            <value>
                <fullName>Distinguished Service Award</fullName>
            </value>
            <value>
                <fullName>Experiential Education Preceptor Award</fullName>
            </value>
            <value>
                <fullName>Fellow(FAMCP) Program</fullName>
            </value>
            <value>
                <fullName>Individual Contribution Award</fullName>
            </value>
            <value>
                <fullName>JMCP Award for Excellence</fullName>
            </value>
            <value>
                <fullName>Managed Care Pharmacy Residency Director/Residency Preceptor Award</fullName>
            </value>
            <value>
                <fullName>New Practitioner Award</fullName>
            </value>
            <value>
                <fullName>Spirit of Volunteerism Award</fullName>
            </value>
            <value>
                <fullName>Steven G. Avey Award</fullName>
            </value>
            <value>
                <fullName>Best Resident/Fellow Poster</fullName>
            </value>
            <value>
                <fullName>Chapter of the Year Award</fullName>
            </value>
            <value>
                <fullName>Best Student Poster</fullName>
            </value>
            <value>
                <fullName>Best Graduate Student Poster</fullName>
            </value>
            <value>
                <fullName>P&amp;T Competition Award</fullName>
                <isActive>false</isActive>
                <label>P&amp;T Competition Award</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>