force-app/main/default/objects/Awards__c/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <label>Placement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Place</fullName>
            </value>
            <value>
                <fullName>Second Place</fullName>
            </value>
            <value>
                <fullName>Third Place</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>