force-app/main/default/objects/Awards__c/fields/School_of_Pharmacy__c.field-meta.xml
<CustomField>
    <fullName>School_of_Pharmacy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School of Pharmacy</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Awards</relationshipLabel>
    <relationshipName>Awards</relationshipName>
    <type>Lookup</type>
</CustomField>