force-app/main/default/objects/Awards__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AMCP Award</fullName>
            </value>
            <value>
                <fullName>Best Poster</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Foundation Award</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>